// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a no-data status view with a hidden glyph 1`] = `
<InjectIntl(StatusView)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isGlyphHidden={true}
  variant="no-data"
>
  <StatusView
    buttonAttrs={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isAlignedTop={false}
    isGlyphHidden={true}
    variant="no-data"
  >
    <div
      className="outer-view"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      >
        <div
          className="title"
        >
          Terra.status-view.no-data
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="actions"
        />
      </div>
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</InjectIntl(StatusView)>
`;

exports[`should render a no-matching-results status-view with top alignment 1`] = `
<InjectIntl(StatusView)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isAlignedTop={true}
  variant="no-matching-results"
>
  <StatusView
    buttonAttrs={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isAlignedTop={true}
    isGlyphHidden={false}
    variant="no-matching-results"
  >
    <div
      className="outer-view is-aligned-top"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      >
        <div
          className="glyph"
        >
          <svg
            className="no-matching-results"
          />
        </div>
        <div
          className="title"
        >
          Terra.status-view.no-matching-results
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="actions"
        />
      </div>
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</InjectIntl(StatusView)>
`;

exports[`should render a not-authorized status-view 1`] = `
<InjectIntl(StatusView)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  variant="not-authorized"
>
  <StatusView
    buttonAttrs={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isAlignedTop={false}
    isGlyphHidden={false}
    variant="not-authorized"
  >
    <div
      className="outer-view"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      >
        <div
          className="glyph"
        >
          <svg
            className="not-authorized"
          />
        </div>
        <div
          className="title"
        >
          Terra.status-view.not-authorized
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="actions"
        />
      </div>
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</InjectIntl(StatusView)>
`;

exports[`should render a status view with custom glyph, title, message, and two buttons 1`] = `
<InjectIntl(StatusView)
  buttonAttrs={
    Array [
      Object {
        "key": 1,
        "text": "Action1",
      },
      Object {
        "key": 2,
        "text": "Action2",
      },
    ]
  }
  customGlyph={
    <IconDiamond
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  message="Test Message"
  title="Test Title"
>
  <StatusView
    buttonAttrs={
      Array [
        Object {
          "key": 1,
          "text": "Action1",
        },
        Object {
          "key": 2,
          "text": "Action2",
        },
      ]
    }
    customGlyph={
      <IconDiamond
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isAlignedTop={false}
    isGlyphHidden={false}
    message="Test Message"
    title="Test Title"
  >
    <div
      className="outer-view"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      >
        <div
          className="glyph"
        >
          <IconDiamond
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <IconBase
              ariaLabel={null}
              className="IconDiamond"
              focusable="false"
              height="1em"
              isBidi={false}
              isSpin={false}
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                aria-hidden="true"
                className="tui-Icon icon IconDiamond"
                focusable="false"
                height="1em"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.8 47.7l22.9-22.9c.4-.4.4-1.1 0-1.6L24.8.3c-.4-.4-1.1-.4-1.6 0L.3 23.2c-.4.4-.4 1.1 0 1.6l22.9 22.9c.4.4 1.2.4 1.6 0z"
                  fill="#78288C"
                />
              </svg>
            </IconBase>
          </IconDiamond>
        </div>
        <div
          className="title"
        >
          Test Title
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="message"
        >
          Test Message
        </div>
        <div
          className="actions"
        >
          <Button
            className="button"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            key="1"
            text="Action1"
            type="button"
            variant="neutral"
          >
            <button
              aria-disabled={false}
              className="button neutral button"
              disabled={false}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="button-label text-only"
              >
                <span
                  className=""
                >
                  Action1
                </span>
              </span>
            </button>
          </Button>
          <Button
            className="button"
            isBlock={false}
            isCompact={false}
            isDisabled={false}
            isIconOnly={false}
            isReversed={false}
            key="2"
            text="Action2"
            type="button"
            variant="neutral"
          >
            <button
              aria-disabled={false}
              className="button neutral button"
              disabled={false}
              onBlur={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="button-label text-only"
              >
                <span
                  className=""
                >
                  Action2
                </span>
              </span>
            </button>
          </Button>
        </div>
      </div>
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</InjectIntl(StatusView)>
`;

exports[`should render an error status-view 1`] = `
<InjectIntl(StatusView)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  variant="error"
>
  <StatusView
    buttonAttrs={Array []}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isAlignedTop={false}
    isGlyphHidden={false}
    variant="error"
  >
    <div
      className="outer-view"
    >
      <div
        className="top-space"
      />
      <div
        className="inner-view"
      >
        <div
          className="glyph"
        >
          <svg
            className="error"
          />
        </div>
        <div
          className="title"
        >
          Terra.status-view.error
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="actions"
        />
      </div>
      <div
        className="bottom-space"
      />
    </div>
  </StatusView>
</InjectIntl(StatusView)>
`;
